# codex_swarm

./: .gitignore  AGENTS.md  README.md  initial_prompt.md  pyproject.toml
.githooks/: prepare-commit-msg
.github/: copilot-instructions.md
docs/: AGENTS.md  COORDINATOR.md
docs/agents/: base.md  coder.md  critic.md  planner.md  researcher.md
projects/: __init__.py
projects/feature_factory/: README.md  __init__.py
projects/feature_factory/api/: README.md  app.py  store.py
projects/feature_factory/cli/: README.md  __init__.py  main.py
projects/feature_factory/data/: store.json
projects/feature_factory/docs/: sample_batch.json
projects/feature_factory/pipeline/: README.md  runner.py
projects/feature_factory/web/: README.md  app.js  app.py  index.html  styles.css
scripts/: passoff_to_codex.py  passoff_to_subagents.py  visit_google.py
swarm/: __init__.py  config.py  coordinator.py  llm.py  main.py  runner.py
swarm/agents/: __init__.py  base.py  coder.py  critic.py  dispatcher.py  instructions.py  planner.py  researcher.py
swarm/bus/: __init__.py  event_log.py
swarm/memory/: __init__.py  persistent.py  short_term.py
swarm/tools/: __init__.py  filesystem.py  git.py  http.py  shell.py
tests/: test_coordinator_and_planner.py  test_dispatcher_agent.py  test_git_tool.py  test_http_tool.py  test_researcher_search.py  test_runner.py  test_swarm_smoke.py  test_tools.py
