[project]
name = "swarm"
version = "0.1.0"
description = "Local multi-agent AI swarm framework"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["swarm*"]
exclude = ["artifacts*"]
